Add Java 16+ improvements.