@@ -31,7 +31,6 @@ import javafx.concurrent.Task;
 import java.io.File;
 import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
 public class ImageMetaDataLoadingService extends IoService<ImageMetaDataLoadingResult> {
     private final ObjectProperty<File> source = new SimpleObjectProperty<>(this, "source");
@@ -88,7 +87,7 @@ public class ImageMetaDataLoadingService extends IoService<ImageMetaDataLoadingR
 
                     final List<File> validImageFiles =
                             imageFiles.get().stream().filter(item -> fileNameToMetaDataMap.containsKey(item.getName()))
-                                      .collect(Collectors.toList());
+                                      .toList();
 
                     return new ImageMetaDataLoadingResult(fileNameToMetaDataMap.size(), errorInfoEntries,
                                                           validImageFiles,
