@@ -30,7 +30,6 @@ import javafx.concurrent.Task;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ModelNameFetchService extends IoService<ModelNameFetchResult> {
     private final ObjectProperty<BoundingBoxPredictorClient> client = new SimpleObjectProperty<>(this, "client");
@@ -66,7 +65,7 @@ public class ModelNameFetchService extends IoService<ModelNameFetchResult> {
                 List<String> models =
                         modelEntries.stream().map(ModelEntry::getModelName)
                                     .filter(modelName -> !modelName.isBlank())
-                                    .collect(Collectors.toList());
+                                    .toList();
 
                 return new ModelNameFetchResult(1, Collections.emptyList(), models);
             }
